--- a/大作业/TestServlet/Servlet01/web/WEB-INF/web.xml
+++ b/大作业/TestServlet/Servlet01/web/WEB-INF/web.xml
@@ -65,13 +65,10 @@
 
     <servlet>
         <servlet-name>SendMessageServlet</servlet-name>
-        <servlet-class>SendMessageServlet</servlet-class>
+        <servlet-class>controller.SendMessageServlet</servlet-class>
     </servlet>
 
-    <servlet>
-        <servlet-name>SendTeacherMessageServlet</servlet-name>
-        <servlet-class>SendTeacherMessageServlet</servlet-class>
-    </servlet>
+
 
     <servlet>
         <servlet-name>ToShowAdminTeacher</servlet-name>
@@ -98,10 +95,20 @@
         <servlet-class>ToShowParentAdminNotification</servlet-class>
     </servlet>
 
+    <servlet>
+        <servlet-name>ToShowTeacherClasses</servlet-name>
+        <servlet-class>ToShowTeacherClasses</servlet-class>
+    </servlet>
+
 
     <servlet>
         <servlet-name>DeleteAdminNotification</servlet-name>
         <servlet-class>controller.DeleteAdminNotification</servlet-class>
+    </servlet>
+
+    <servlet>
+        <servlet-name>QueryMessagesServlet</servlet-name>
+        <servlet-class>controller.QueryMessagesServlet</servlet-class>
     </servlet>
 
 
@@ -184,10 +191,7 @@
         <url-pattern>/SendMessageServlet</url-pattern>
     </servlet-mapping>
 
-    <servlet-mapping>
-        <servlet-name>SendTeacherMessageServlet</servlet-name>
-        <url-pattern>/SendTeacherMessageServlet</url-pattern>
-    </servlet-mapping>
+
 
     <servlet-mapping>
         <servlet-name>ToShowAdminClass</servlet-name>
@@ -224,6 +228,16 @@
     <servlet-mapping>
         <servlet-name>ToShowParentAdminNotification</servlet-name>
         <url-pattern>/ToShowParentAdminNotification</url-pattern>
+    </servlet-mapping>
+
+    <servlet-mapping>
+        <servlet-name>ToShowTeacherClasses</servlet-name>
+        <url-pattern>/ToShowTeacherClasses</url-pattern>
+    </servlet-mapping>
+
+    <servlet-mapping>
+        <servlet-name>QueryMessagesServlet</servlet-name>
+        <url-pattern>/QueryMessagesServlet</url-pattern>
     </servlet-mapping>
 
 
